Just added layout to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Standard Hello World title
+---
+layout: default
+---
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Standard hello world Title</title>
+
+</head>
+<body>
+
+</body>
+</html>
